Reosurces for ulearn

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-.installed.cfg
-.mr.developer.cfg
-bin
-develop-eggs
-docs/html
-include
-lib
-parts
-var
+.DS_Store
+*.egg
+*.egg-info
+*.pyc
+*$py.class
+*.pt.py
+*.txt.py
+*.db
+*.fs
+*.fs.*
+*.log
+*.project
+*.settings
+*.pydevproject
+passwd
+data
+./dist
+docs/_build
+*.mo
+build
+node_modules
